--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,17 @@ pip install opencv-python
 -- choose cuda version if required https://www.dgl.ai/pages/start.html   https://pytorch.org/get-started/locally/
 pip install dgl
 pip install torch==1.7.1+cpu torchvision==0.8.2+cpu torchaudio===0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
-pip install grakel
+conda install grakel
 pip install tqdm
 pip install matplotlib
+pip install graphgiz
+pip install pydot
 
 --put this last
-pip streamlit
+pip install streamlit
+
+
+create folder called
+"trained_models"
+"tmp"
+change where anaconda is in .bat
