--- a/.gitignore
+++ b/.gitignore
@@ -125,8 +125,8 @@ dmypy.json
 .pyre/
 
 # Dataset folder, and tmp folder
-Dataset/*
-!Dataset/ABCDataset.py
-!Dataset/ABCSiameseDataset.py
-tmp/*
-trained_models/*
+#Dataset/*
+#!Dataset/ABCDataset.py
+#!Dataset/ABCSiameseDataset.py
+#tmp/*
+#trained_models/*
